[tool.poetry]
name = "recipe-book"
version = "0.1.0"
description = "Static recipe site generated with Pelican"
authors = ["John Trammell <john.trammell@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "recipe_book"}]
repository = "https://github.com/trammell/recipe-book"

[tool.poetry.urls]
issues = "https://github.com/trammell/recipes/issues"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
ghp-import = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
